crates/ffi/include/pure_study.h

// How many verse references an occurrence list returns before it is capped
// (`total` in the JSON stays honest above this).
#define OCCURRENCE_CAP 500
// One laid-out chapter: the positioned display list a shell paints and
// hit-tests. Opaque to C; produced by [`pure_engine_layout_chapter`], released
// with [`pure_layout_free`].
typedef struct PureDisplayList PureDisplayList;
// The loaded, immutable study core: corpus + Strong's dictionary + the search
// and occurrence indices every lookup rides on. Opaque to C; construct with
// [`pure_engine_open`] / [`pure_engine_open_from_bytes`], release with
// [`pure_engine_free`].
typedef struct PureEngine PureEngine;
// Layout parameters, all in device pixels — the C-ABI mirror of
// `pure_layout::LayoutConfig` (passed by value, so it is `#[repr(C)]`).
typedef struct PureLayoutConfig {
  float width;
  float line_height;
  float space_width;
  float verse_num_gap;
  float para_indent;
  float para_spacing;
  // Nonzero: start every verse on a fresh line (verse-per-line mode).
  uint32_t verse_break;
} PureLayoutConfig;
// Advance-width callback: given the caller's context pointer and a
// NUL-terminated UTF-8 run of text, return its width in device pixels in the
// reader's scripture font. The shell backs this with its native text stack so
// the hit regions this crate computes line up exactly with painted glyphs.
//
// Nullable (`Option<fn>`): a null callback makes layout return null.
//
// # Contract — the callback MUST be total
// It must **not** throw or panic across the boundary and should return a
// **finite, non-negative** width. This crate's [`catch_unwind`] firewall only
// catches *Rust* panics; a foreign exception unwinding out of this callback is
// undefined behaviour — on .NET it fast-fails the process, on JNA it is
// swallowed and reported as `0.0`. A returned `NaN`/negative is clamped to
// `0.0` here (a degraded but safe layout) rather than corrupting line-breaking.
typedef float (*PureMeasureFn)(void *ctx, const char *text);
// The pure-study core version as a caller-freed NUL-terminated UTF-8 string.
// Never null.
char *pure_study_version(void);
// Free a string previously returned by any `pure_*` function. Null is a no-op.
//
// # Safety
// `ptr` must be a pointer returned by this library and not already freed.
void pure_study_string_free(char *ptr);
// Open an engine from an overlay-style home directory containing
// `data/kjv.jsonl` and `data/strongs.json`.
//
// Returns null on failure; if `out_err` is non-null it receives a caller-freed
// error message (and is set to null on success).
//
// # Safety
// `home` is a valid NUL-terminated UTF-8 path; `out_err` is null or a writable
// slot for one `*mut c_char`.
struct PureEngine *pure_engine_open(const char *home, char **out_err);
// Open an engine from in-memory bytes — for shells that bundle the data as
// assets/resources (decision #3): the `kjv.jsonl` text and the `strongs.json`
// object, each as a length-delimited byte buffer (need not be NUL-terminated).
//
// Returns null on failure; `out_err` behaves as in [`pure_engine_open`].
//
// # Safety
// Each `*_ptr`/`*_len` pair describes a readable buffer of that length (a null
// pointer with length 0 is treated as empty and will error); `out_err` is null
// or a writable slot.
struct PureEngine *pure_engine_open_from_bytes(const uint8_t *kjv_ptr,
                                               size_t kjv_len,
                                               const uint8_t *strongs_ptr,
                                               size_t strongs_len,
                                               char **out_err);
// Release an engine. Null is a no-op.
//
// # Safety
// `engine` must be a pointer from `pure_engine_open*` and not already freed.
void pure_engine_free(struct PureEngine *engine);
// Table of contents as JSON: `{"books":[{"id","name","chapters"},...]}` in
// canonical order. Chapter counts reflect the loaded corpus and are floored at
// 1 for any book the corpus lacks (the full KJV corpus has all 66 books, so in
// production the counts are exact). Caller-freed; null only on a null engine.
//
// # Safety
// `engine` is a valid engine pointer.
char *pure_engine_toc_json(const struct PureEngine *engine);
// Number of chapters the loaded corpus has for `book` (an OSIS id like
// `"John"`). Floored at 1 for a book the corpus lacks (a safe UI range floor);
// 0 only on a null engine.
//
// # Safety
// `engine` is valid; `book` is a valid NUL-terminated UTF-8 string.
uint32_t pure_engine_chapter_count(const struct PureEngine *engine, const char *book);
// A single verse as JSON:
// `{"reference","display","body","title","tokens":[...]}`. `reference` is a
// compact key like `"John 3:16"`. Null if the reference is unknown or
// unparseable. Caller-freed.
//
// # Safety
// `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
char *pure_engine_verse_json(const struct PureEngine *engine, const char *ref_key);
// A single token as JSON: `{"pre","word","post","render","flags","strongs"}`.
// Null if the reference or token index is out of range. Caller-freed.
//
// # Safety
// `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
char *pure_engine_token_json(const struct PureEngine *engine,
                             const char *ref_key,
                             uint32_t token_index);
// Lay out a chapter into a display list, measuring text through `measure`
// (called with `measure_ctx`). Returns an opaque handle to release with
// [`pure_layout_free`], or null on a null engine, a null callback, or an
// unknown/out-of-range book+chapter (no such verses). Because the KJV has no
// empty chapters, a null return reliably means "past the end" — a shell can
// page by advancing until it gets null.
//
// # Safety
// `engine` is valid; `book` is a valid NUL-terminated UTF-8 string; `measure`
// is a valid function pointer for the call and `measure_ctx` is whatever it
// expects (it is passed back verbatim).
struct PureDisplayList *pure_engine_layout_chapter(const struct PureEngine *engine,
                                                   const char *book,
                                                   uint32_t chapter,
                                                   struct PureLayoutConfig cfg,
                                                   PureMeasureFn measure,
                                                   void *measure_ctx);
// The full display list as JSON (see [`wire`] for the schema): positioned
// items plus the total painted `width`/`height`. Caller-freed; null on a null
// handle.
//
// # Safety
// `dl` is a valid display-list pointer.
char *pure_layout_to_json(const struct PureDisplayList *dl);
// Total painted height in device pixels (scrollbar extent). 0 on a null handle.
//
// # Safety
// `dl` is a valid display-list pointer.
float pure_layout_height(const struct PureDisplayList *dl);
// The column width the layout targeted. 0 on a null handle.
//
// # Safety
// `dl` is a valid display-list pointer.
float pure_layout_width(const struct PureDisplayList *dl);
// Number of placed items in the display list. 0 on a null handle.
//
// # Safety
// `dl` is a valid display-list pointer.
uint32_t pure_layout_item_count(const struct PureDisplayList *dl);
// Resolve a point (in the display list's own coordinate space) to the word
// under it. Returns a `Hit` JSON (`{"verse","display","tokenIndex","strongs"}`)
// or null when the point hits a verse number, a gap, or nothing. Caller-freed.
//
// # Safety
// `dl` is a valid display-list pointer.
char *pure_layout_hit_test_json(const struct PureDisplayList *dl, float x, float y);
// Release a display list. Null is a no-op.
//
// # Safety
// `dl` must be a pointer from [`pure_engine_layout_chapter`] and not already
// freed.
void pure_layout_free(struct PureDisplayList *dl);
// A Strong's entry as JSON: `{"code","lemma","xlit","pron","deriv","def",
// "kjv"}` (unknown fields null). Null when the code is absent. Caller-freed.
//
// # Safety
// `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
char *pure_engine_strongs_json(const struct PureEngine *engine, const char *code);
// The concordance for a Strong's code as JSON: `{"code","total","capped",
// "verses":["Gen 1:1",...]}`. `verses` is capped at [`OCCURRENCE_CAP`] in
// canonical order; `total` is the honest count and `capped` says whether the
// list was truncated. Caller-freed; null on a null engine.
//
// # Safety
// `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
char *pure_engine_strongs_occurrences_json(const struct PureEngine *engine, const char *code);