crates/ffi/bindings/csharp/PureStudyNative.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace PureStudy.Native
{
    public static unsafe partial class PureStudyNative
    {
        const string __DllName = "pure_ffi";





        /// <summary>
        ///  The pure-study core version as a caller-freed NUL-terminated UTF-8 string.
        ///  Never null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_study_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_study_version();

        /// <summary>
        ///  Free a string previously returned by any `pure_*` function. Null is a no-op.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by this library and not already freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_study_string_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pure_study_string_free(byte* ptr);

        /// <summary>
        ///  Open an engine from an overlay-style home directory containing
        ///  `data/kjv.jsonl` and `data/strongs.json`.
        ///
        ///  Returns null on failure; if `out_err` is non-null it receives a caller-freed
        ///  error message (and is set to null on success).
        ///
        ///  # Safety
        ///  `home` is a valid NUL-terminated UTF-8 path; `out_err` is null or a writable
        ///  slot for one `*mut c_char`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_open", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PureEngine* pure_engine_open(byte* home, byte** out_err);

        /// <summary>
        ///  Open an engine from in-memory bytes — for shells that bundle the data as
        ///  assets/resources (decision #3): the `kjv.jsonl` text and the `strongs.json`
        ///  object, each as a length-delimited byte buffer (need not be NUL-terminated).
        ///
        ///  Returns null on failure; `out_err` behaves as in [`pure_engine_open`].
        ///
        ///  # Safety
        ///  Each `*_ptr`/`*_len` pair describes a readable buffer of that length (a null
        ///  pointer with length 0 is treated as empty and will error); `out_err` is null
        ///  or a writable slot.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_open_from_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PureEngine* pure_engine_open_from_bytes(byte* kjv_ptr, nuint kjv_len, byte* strongs_ptr, nuint strongs_len, byte** out_err);

        /// <summary>
        ///  Release an engine. Null is a no-op.
        ///
        ///  # Safety
        ///  `engine` must be a pointer from `pure_engine_open*` and not already freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pure_engine_free(PureEngine* engine);

        /// <summary>
        ///  Table of contents as JSON: `{"books":[{"id","name","chapters"},...]}` in
        ///  canonical order. Chapter counts reflect the loaded corpus and are floored at
        ///  1 for any book the corpus lacks (the full KJV corpus has all 66 books, so in
        ///  production the counts are exact). Caller-freed; null only on a null engine.
        ///
        ///  # Safety
        ///  `engine` is a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_toc_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_toc_json(PureEngine* engine);

        /// <summary>
        ///  Number of chapters the loaded corpus has for `book` (an OSIS id like
        ///  `"John"`). Floored at 1 for a book the corpus lacks (a safe UI range floor);
        ///  0 only on a null engine.
        ///
        ///  # Safety
        ///  `engine` is valid; `book` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_chapter_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint pure_engine_chapter_count(PureEngine* engine, byte* book);

        /// <summary>
        ///  A single verse as JSON:
        ///  `{"reference","display","body","title","tokens":[...]}`. `reference` is a
        ///  compact key like `"John 3:16"`. Null if the reference is unknown or
        ///  unparseable. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_verse_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_verse_json(PureEngine* engine, byte* ref_key);

        /// <summary>
        ///  A single token as JSON: `{"pre","word","post","render","flags","strongs"}`.
        ///  Null if the reference or token index is out of range. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `ref_key` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_token_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_token_json(PureEngine* engine, byte* ref_key, uint token_index);

        /// <summary>
        ///  Lay out a chapter into a display list, measuring text through `measure`
        ///  (called with `measure_ctx`). Returns an opaque handle to release with
        ///  [`pure_layout_free`], or null on a null engine, a null callback, or an
        ///  unknown/out-of-range book+chapter (no such verses). Because the KJV has no
        ///  empty chapters, a null return reliably means "past the end" — a shell can
        ///  page by advancing until it gets null.
        ///
        ///  # Safety
        ///  `engine` is valid; `book` is a valid NUL-terminated UTF-8 string; `measure`
        ///  is a valid function pointer for the call and `measure_ctx` is whatever it
        ///  expects (it is passed back verbatim).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_layout_chapter", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PureDisplayList* pure_engine_layout_chapter(PureEngine* engine, byte* book, uint chapter, PureLayoutConfig cfg, delegate* unmanaged[Cdecl]<void*, byte*, float> measure, void* measure_ctx);

        /// <summary>
        ///  The full display list as JSON (see [`wire`] for the schema): positioned
        ///  items plus the total painted `width`/`height`. Caller-freed; null on a null
        ///  handle.
        ///
        ///  # Safety
        ///  `dl` is a valid display-list pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_to_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_layout_to_json(PureDisplayList* dl);

        /// <summary>
        ///  Total painted height in device pixels (scrollbar extent). 0 on a null handle.
        ///
        ///  # Safety
        ///  `dl` is a valid display-list pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_height", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float pure_layout_height(PureDisplayList* dl);

        /// <summary>
        ///  The column width the layout targeted. 0 on a null handle.
        ///
        ///  # Safety
        ///  `dl` is a valid display-list pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float pure_layout_width(PureDisplayList* dl);

        /// <summary>
        ///  Number of placed items in the display list. 0 on a null handle.
        ///
        ///  # Safety
        ///  `dl` is a valid display-list pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_item_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint pure_layout_item_count(PureDisplayList* dl);

        /// <summary>
        ///  Resolve a point (in the display list's own coordinate space) to the word
        ///  under it. Returns a `Hit` JSON (`{"verse","display","tokenIndex","strongs"}`)
        ///  or null when the point hits a verse number, a gap, or nothing. Caller-freed.
        ///
        ///  # Safety
        ///  `dl` is a valid display-list pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_hit_test_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_layout_hit_test_json(PureDisplayList* dl, float x, float y);

        /// <summary>
        ///  Release a display list. Null is a no-op.
        ///
        ///  # Safety
        ///  `dl` must be a pointer from [`pure_engine_layout_chapter`] and not already
        ///  freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_layout_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pure_layout_free(PureDisplayList* dl);

        /// <summary>
        ///  A Strong's entry as JSON: `{"code","lemma","xlit","pron","deriv","def",
        ///  "kjv"}` (unknown fields null). Null when the code is absent. Caller-freed.
        ///
        ///  # Safety
        ///  `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_strongs_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_strongs_json(PureEngine* engine, byte* code);

        /// <summary>
        ///  The concordance for a Strong's code as JSON: `{"code","total","capped",
        ///  "verses":["Gen 1:1",...]}`. `verses` is capped at [`OCCURRENCE_CAP`] in
        ///  canonical order; `total` is the honest count and `capped` says whether the
        ///  list was truncated. Caller-freed; null on a null engine.
        ///
        ///  # Safety
        ///  `engine` is valid; `code` is a valid NUL-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "pure_engine_strongs_occurrences_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* pure_engine_strongs_occurrences_json(PureEngine* engine, byte* code);
